// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag> can be controlled by visible with hidden as initial value 1`] = `
<div>
  <span
    class="fnx-tag fnx-tag--default"
  >
    switch
  </span>
</div>
`;

exports[`<Tag> can be controlled by visible with hidden as initial value 2`] = `<div />`;

exports[`<Tag> can be controlled by visible with hidden as initial value 3`] = `
<div>
  <span
    class="fnx-tag fnx-tag--default fnx-fade-enter-done"
  >
    switch
  </span>
</div>
`;

exports[`<Tag> transitionDuration 1`] = `
<div>
  <span
    class="fnx-tag fnx-tag--default"
    style="transition-duration: 100ms;"
  />
</div>
`;

exports[`<Tag> when the theme is plain 1`] = `
<div>
  <span
    class="fnx-tag fnx-tag--default fnx-tag--plain"
  />
</div>
`;
